--- a/amazon_clone/src/Subtotal.css
+++ b/amazon_clone/src/Subtotal.css
@@ -24,7 +24,7 @@
   border-radius: 2px;
   width: 100%;
   height: 30px;
-  boreder: 1px solid;
+  border: 1px solid;
   margin-top: 10px;
   border-color: #a88734 #9c7e31 #846a29;
   color: #111;
